@@ -1,5 +1,5 @@
 <?php
-// $Id: system.install,v 1.106 2007/05/14 13:43:37 dries Exp $
+// $Id: system.install,v 1.107 2007/05/14 16:22:26 dries Exp $
 
 /**
  * Test and report Drupal installation requirements.
@@ -750,7 +750,7 @@ function system_install() {
         expire int NOT NULL default '0',
         created int NOT NULL default '0',
         headers text,
-        serialized int(1) NOT NULL default '0',
+        serialized smallint NOT NULL default '0',
         PRIMARY KEY (cid)
       )");
       db_query("CREATE INDEX {cache}_expire_idx ON {cache} (expire)");
@@ -3919,7 +3919,7 @@ function system_update_6015() {
         expire int NOT NULL default '0',
         created int NOT NULL default '0',
         headers text,
-        serialized int(1) NOT NULL default '0',
+        serialized smallint NOT NULL default '0',
         PRIMARY KEY (cid)
     )");
       $ret[] = update_sql("CREATE INDEX {cache_form}_expire_idx ON {cache_form} (expire)");
