@@ -1,4 +1,4 @@
-// $Id: system.js,v 1.4 2007/05/10 19:55:23 dries Exp $
+// $Id: system.js,v 1.5 2007/05/14 16:22:26 dries Exp $
 
 /**
  * Internal function to check using Ajax if clean URLs can be enabled on the
@@ -55,4 +55,26 @@ Drupal.cleanURLsInstallCheck = function() {
 Drupal.installDefaultTimezone = function() {
   var offset = new Date().getTimezoneOffset() * -60;
   $("#edit-date-default-timezone").val(offset);
+}
+
+/**
+ * Show/hide custom format sections on the date-time settings page.
+ */
+Drupal.dateTimeAutoAttach = function() {
+  // Show/hide custom format depending on the select's value.
+  $("select.date-format").change(function() {
+    $(this).parents("div.date-container").children("div.custom-container")[$(this).val() == "custom" ? "show" : "hide"]();
+  });
+
+  // Attach keyup handler to custom format inputs.
+  $("input.custom-format").keyup(function() {
+    var input = $(this);
+    var url = Drupal.settings.dateTime.lookup +(Drupal.settings.dateTime.lookup.match(/\?q=/) ? "&format=" : "?format=") + Drupal.encodeURIComponent(input.val());
+    $.getJSON(url, function(data) {
+      $("div.description span", input.parent()).html(data);
+    });
+  });
+
+  // Trigger the event handler to show the form input if necessary.
+  $("select.date-format").trigger("change");
 }
